[tool.poetry]
name = "viikko2"
version = "0.1.0"
description = ""
authors = ["mirelle01 <lybackmirelle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
